--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "pouchdb": "^5.0.0",
     "pouchdb-find": "^0.6.0",
     "request": "^2.65.0",
-    "tap": "^2.1.1",
     "union": "^0.4.4"
   },
   "devDependencies": {
-    "nock": "^2.15.0",
-    "rimraf": "^2.4.3",
+    "tap": "^2.1.1",
+    "async": "^1.5.0",
+    "lodash": "^3.10.1",
     "shelljs": "^0.5.3"
   }
 }
