--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ecstatic": "^1.1.3",
     "hat": "0.0.3",
     "pouchdb": "^5.0.0",
+    "promise": "^7.0.4",
     "request": "^2.65.0",
     "union": "^0.4.4"
   },
